visual fixes
questions and asteroids went off screen on mobile, causing a horizontal scrollbar (ew), fixed for most devices (i think)

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,7 +4,7 @@
 
 .footer {
     margin-top: 3rem;
-    background-color: inherit;
+    background-color: rgba(0, 0, 255, 0);
     height: 5rem;
 }
 
